[FE] add preloader

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -61,11 +61,11 @@
         </style>
     </head>
     <body>
-        <!-- <div class="preloader" id="preloader">
+        <div class="preloader" id="preloader">
             <div class="preloader__indicator-box">
                 <div class="preloader__indicator"></div>
             </div>
-        </div> -->
+        </div>
         <div id="root"></div>
     </body>
 </html>
