--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
-        <title>Administrator's office</title>
+        <title>Drag And Drop</title>
         <style type="text/css">
             html, body {
                 margin: 0;
